--- a/firebase.html
+++ b/firebase.html
@@ -10,20 +10,7 @@
 <button id="submitBtn" onclick="toggle()">Click me!</button>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
-<script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyDeth6wipsNEnCl5M91QAAr03c9c0cO1Eo",
-        authDomain: "fir-web-af30d.firebaseapp.com",
-        databaseURL: "https://fir-web-af30d.firebaseio.com",
-        projectId: "fir-web-af30d",
-        storageBucket: "fir-web-af30d.appspot.com",
-        messagingSenderId: "674176477241"
-    };
-    firebase.initializeApp(config);
-
-</script>
+<!--Embed the firebase code snippet here-->
 <script src="./script.js"></script>
 </body>
 </html>
